fix: Added media queries to make the navigation more responsive on mobile.
- reduce the brand-image to width: 14.9rem; on devices of max-width: 360px
- reduce the brand-image to width: 10rem; on devices of max-width: 285px

--- a/src/components/brand/brand.css
+++ b/src/components/brand/brand.css
@@ -12,3 +12,17 @@
 .hamburger {
   margin-bottom: 0.6rem;
 }
+
+@media (max-width: 360px) {
+  .brand-image {
+    width: 14.9rem;
+    margin-top: 0.2rem;
+  }
+}
+
+@media (max-width: 285px) {
+  .brand-image {
+    width: 10rem;
+    margin-top: 0.2rem;
+  }
+}
